--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ venv/
 single_player/engine/__pycache__
 single_player/dartmoor_parser/__pycache__
 single_player/dartmoor_model/__pycache__
-*/*/__pycache__
+**/**/__pycache__
